syntax = "proto3";

package resources.rector;

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/rector;rector";

message BannerMessage {
  // @sanitize: method=StripTags
  string id = 1 [(validate.rules).string.max_len = 64];
  // @sanitize: method
  string title = 2 [(validate.rules).string = {
    min_len: 3,
    max_len: 512
  }];
  // @sanitize: method=StripTags
  optional string icon = 3 [(validate.rules).string.max_len = 128];
  // @sanitize: method=StripTags
  optional string color = 4 [(validate.rules).string.max_len = 12];
  resources.timestamp.Timestamp created_at = 5;
  optional resources.timestamp.Timestamp expires_at = 6;
}
